tests/baselines/reference/extendNonClassSymbol1.errors.txt
==== tests/cases/compiler/extendNonClassSymbol1.ts (1 errors) ====
    class A { foo() { } }
    var x = A;
    class C extends x { } // error, could not find symbol xs
                    ~
!!! error TS2095: Could not find symbol 'x'.